proj2/test/test_11712009_2.out
Error type 1 at Line 3: Variable not found in scope.
Error type 5 at Line 3: Two sides of assignment are not of the same type.
