proj2/test/test_11712009_2.spl
int main(int a, int b) {
    b = a;
    c = 1;
}